Added Presentation Package
Removed the Bottom Navigation Bar and Added Presentation package, which currently looks more like the sample project. MainActivity will now list 3 buttons - one for Movies, Users and Add. Functionality added only to MovieListActivity to display a list of sample movies (that are currently not received from the Business package)

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_movies"
         android:icon="@drawable/ic_media_video_poster"
         android:title="@string/title_movies" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_users"
         android:icon="@drawable/ic_menu_allfriends"
         android:title="@string/title_users" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_add"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/title_add" />
 
