--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="msms.comp3350.main.presentation.MovieListActivity">
+    tools:context="msms.comp3350.presentation.MovieListActivity">
 
     <ListView
         android:layout_width="match_parent"
