--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -7,12 +8,23 @@
     android:orientation="vertical"
     tools:context="msms.comp3350.presentation.MovieListActivity">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/listMovies"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/plus_movie_button"
+        android:layout_width="64dp"
+        android:layout_height="74dp"
         android:layout_weight="1"
+        android:clickable="true"
+        android:onClick="openAddMovie"
+        android:src="@android:drawable/ic_input_add"
+        android:visibility="visible"
+        app:backgroundTint="@android:color/darker_gray" />
+
+    <ListView
+        android:id="@+id/listMovies"
+        android:layout_width="match_parent"
+        android:layout_height="767dp"
         android:layout_gravity="top"
+        android:layout_weight="1"
         android:choiceMode="singleChoice" />
 
 </LinearLayout>
