--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,54 @@
     android:layout_height="match_parent"
     tools:context="msms.comp3350.main.MainActivity">
 
-    <Button
-        android:id="@+id/MovieButton"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/MovieButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="buttonMoviesOnClick"
+            android:text="@string/title_movies" />
+
+        <Button
+            android:id="@+id/UsersButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="buttonUsersOnClick"
+            android:text="@string/title_users" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="179dp"
-        android:text="Movies"
-        android:onClick="buttonMoviesOnClick"/>
+        android:text="@string/app_name_full"
+        android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/UsersButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/MovieButton"
-        android:layout_below="@+id/MovieButton"
-        android:text="Users"
-        android:onClick="buttonUsersOnClick"/>
+    <ImageView
+        android:id="@+id/movieImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/appTitle"
+        android:layout_toStartOf="@+id/linearLayout"
+        android:scaleType="fitXY"
+        android:src="@drawable/movie" />
+
+    <ImageView
+        android:id="@+id/userImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/appTitle"
+        android:layout_toEndOf="@+id/linearLayout"
+        android:scaleType="fitXY"
+        android:src="@drawable/user" />
 </RelativeLayout>
