--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -15,8 +15,7 @@
         <TextView
             android:id="@+id/movie_info_text"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1.0"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <Button
@@ -25,6 +24,25 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:text="Back" />
+        android:text="@string/back" />
+
+    <Button
+        android:id="@+id/updateMovieButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/update"
+        android:enabled="false"
+        android:onClick="buttonMovieUpdateOnClick"/>
+
+    <Button
+        android:id="@+id/deleteMovieButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/delete"
+        android:onClick="buttonMovieDeleteOnClick"/>
 
 </RelativeLayout>
