--- a/app/src/main/res/layout/activity_user_display.xml
+++ b/app/src/main/res/layout/activity_user_display.xml
@@ -15,8 +15,7 @@
         <TextView
             android:id="@+id/user_info_text"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1.0"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <Button
@@ -25,6 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:text="Back" />
+        android:text="@string/back" />
 
 </RelativeLayout>
