--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -9,12 +9,12 @@
 
     <Spinner
         android:id="@+id/category_spinner3"
-        android:layout_width="126dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="16dp"
         android:soundEffectsEnabled="true"
-        app:layout_constraintStart_toEndOf="@+id/category_spinner"
+        app:layout_constraintStart_toEndOf="@+id/category_spinner2"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
@@ -29,9 +29,9 @@
         android:layout_width="wrap_content" />
 
     <Spinner
-        android:id="@+id/category_spinner2"
-        android:layout_width="126dp"
-        android:layout_height="26dp"
+        android:id="@+id/category_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:soundEffectsEnabled="true"
@@ -39,13 +39,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Spinner
-        android:id="@+id/category_spinner"
-        android:layout_width="126dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="16dp"
+        android:id="@+id/category_spinner2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
         android:soundEffectsEnabled="true"
-        app:layout_constraintStart_toEndOf="@+id/category_spinner2"
+        app:layout_constraintStart_toEndOf="@+id/category_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
@@ -86,7 +86,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="32dp"
         android:text="@string/movie_category2"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
@@ -96,7 +96,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="32dp"
         android:text="@string/movie_category3"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
@@ -115,17 +115,17 @@
 
     <Spinner
         android:id="@+id/day_spinner"
-        android:layout_width="77dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@+id/month_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Spinner
         android:id="@+id/month_spinner"
-        android:layout_width="77dp"
-        android:layout_height="26dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
         android:text="@string/movie_release"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />
 
     <TextView
         android:id="@+id/textView7"
@@ -194,8 +194,8 @@
 
     <Spinner
         android:id="@+id/score_spinner"
-        android:layout_width="51dp"
-        android:layout_height="26dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@+id/release_year_text"
@@ -218,7 +218,7 @@
         android:id="@+id/exp_year_text"
         android:layout_width="78dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="42dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/movie_release_hint"
