Changed Movie Display Activity
-> activity_movie_display is now (almost) the same layout as activity_add_movie, but automatically populates all fields with the selected movie's data; also has "Update" and "Delete" buttons instead of "Add Movie" as in activity_add_movie.
-> Description TextEdit widgets in activity_add_movie and activity_movie_display now display text at the top of the widget, so less text is cut-off by the keyboard when typing

--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -188,10 +188,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:gravity="top"
         android:hint="@string/movie_description_hint"
         android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
