--- a/app/src/main/res/layout/activity_movie_search.xml
+++ b/app/src/main/res/layout/activity_movie_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="msms.comp3350.presentation.MovieSearch">
+    tools:context="msms.comp3350.presentation.MovieSearchActivity">
 
     <ListView
         android:id="@+id/search_results_list"
