--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -206,7 +206,7 @@
 
     <Button
         android:id="@+id/update_button"
-        android:layout_width="match_constraint"
+        android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
