--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -217,10 +217,11 @@
         app:layout_constraintEnd_toStartOf="@+id/delete_button"
         app:layout_constraintStart_toEndOf="@+id/cancel_button" />
 
-    <EditText
+    <TextView
         android:id="@+id/exp_year_text"
         android:layout_width="107dp"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
+        android:gravity="center"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:ems="10"
