--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -167,8 +167,9 @@
 
     <EditText
         android:id="@+id/description_text"
-        android:layout_width="550dp"
-        android:layout_height="350dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
@@ -177,6 +178,7 @@
         android:hint="@string/movie_description_hint"
         android:inputType="textPersonName"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/update_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -206,7 +208,7 @@
 
     <Button
         android:id="@+id/update_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
@@ -237,10 +239,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
         android:text="Change Date"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/exp_year_text"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/exp_year_text"
+        app:layout_constraintStart_toEndOf="@+id/exp_year_text" />
 
 </android.support.constraint.ConstraintLayout>
