--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -228,7 +228,6 @@
         android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="@string/movie_release_hint"
-        android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -239,7 +238,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Change Date"
+        android:text="@string/change_date"
         android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/exp_year_text"
         app:layout_constraintStart_toEndOf="@+id/exp_year_text" />
