ReportList Activity Now Launches
-> Fixed program crashing when "Reports" button is clicked in activity_main 
-> Changed ListView object's name from "listView" to "reportList" to avoid confusion 
-> Changed the name of the ListView widget in activity_report_list.xml from "report_listView" to "listReports"

--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -7,7 +7,7 @@
     tools:context="msms.comp3350.presentation.ReportList">
 
     <ListView
-        android:id="@+id/report_listview"
+        android:id="@+id/listReports"
         android:layout_width="584dp"
         android:layout_height="807dp"
         android:layout_marginBottom="8dp"
