Both ReportList charts now working.

--- a/app/src/main/res/layout/activity_pie_chart.xml
+++ b/app/src/main/res/layout/activity_pie_chart.xml
@@ -7,6 +7,5 @@
         style="@style/APDefacto.Light"
         android:id="@+id/pie"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        ap:title="Pie Chart Test" />
+        android:layout_height="fill_parent" />
 </LinearLayout>
