--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -68,7 +68,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="12dp"
-        android:onClick="buttonMovieDeleteOnClick"
+        android:onClick="buttonDeleteOnClick"
         android:text="@string/delete"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
@@ -192,7 +192,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
-        android:onClick="buttonMovieUpdateOnClick"
+        android:onClick="buttonUpdateOnClick"
         android:text="@string/update"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
