--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="openAddMovie"
+        android:onClick="ButtonOpenAddMovieOnClick"
         android:text="@string/add_movie"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
