--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -229,7 +229,7 @@
         android:layout_height="64dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
-        android:onClick="addMovie"
+        android:onClick="buttonMovieUpdateOnClick"
         android:text="@string/add"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
