Minor constraint adjustments
CHANGES:
-> Converted activty_user_list.xml to ConstraintLayout

--- a/app/src/main/res/layout/activity_user_display.xml
+++ b/app/src/main/res/layout/activity_user_display.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="text"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/password_textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/age_textView"
         app:layout_constraintEnd_toEndOf="@+id/subenddate_textView"
@@ -164,7 +164,7 @@
         android:ems="10"
         android:gravity="center"
         android:singleLine="false"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/userid_textView"
         app:layout_constraintEnd_toEndOf="@+id/pickDate"
@@ -175,7 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/gender_textView"
         app:layout_constraintTop_toBottomOf="@+id/age_text" />
 
