Added user / movie history
Populated historyText to display user history or movie history. Also modified historyText to be scrollable.

--- a/app/src/main/res/layout/activity_data_display.xml
+++ b/app/src/main/res/layout/activity_data_display.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/history_list"
         android:textSize="18sp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
