--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="msms.comp3350.presentation.MainActivity">
+    tools:context="msms.comp.presentation.MainActivity">
 
 
     <Button
