--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -4,7 +4,7 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="msms.comp3350.presentation.UserListActivity">
+    tools:context="msms.comp.presentation.UserListActivity">
 
     <ListView
         android:id="@+id/listUsers"
