Revert "Renamed Packages"
This reverts commit 47bc2e9955109eebc5570580fc14434bca56a1c0.

--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="msms.comp.presentation.ReportListActivity">
+    tools:context="msms.comp3350.presentation.ReportListActivity">
 
     <ListView
         android:id="@+id/listReports"
