--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="msms.comp.presentation.MovieDisplayActivity"
+    tools:context="msms.comp3350.presentation.MovieDisplayActivity"
     tools:layout_editor_absoluteY="89dp">
 
     <TextView
